fix z-index for online

--- a/src/pages/Chats/ChatGroup/Online/Online.module.css
+++ b/src/pages/Chats/ChatGroup/Online/Online.module.css
@@ -53,6 +53,7 @@
   width: 100%;
   left: 0;
   top: 0;
+  z-index: 1;
   background-color: var(--background-other);
 }
 
